--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,29 @@
 .backgroundimage{
     background-image: url(../images/gateway.jpg);
-    max-width: 960px;
-    max-height: 1000px;
+    /* max-width: 960px;
+    max-height: 1000px; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
 }
 
 .container{
-    padding: 0px;
+    padding: 30 0 0 0;
     margin: 0px;
     overflow: auto;
 }
 
 #game-section{
     text-align: center;
-    font-size: 60px;
+    font-size: 45px;
     font-weight: 700;
     color: cyan;
     padding-left: 65px;
     line-height: 60px;
     margin-left: 60px;
     outline: 5px solid white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    overflow: auto;
+    max-height: 920px;
 }
